welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
 var b:Boolean =false
 if (!estFaceMur()) {b=true}
 
avance() 
else if (getCouleurSol()== Color.green) {b=true}
recule()
else {b=false}
return b
}        
